<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_walking"
        android:enabled="true"
        android:icon="@drawable/ic_vec_directions_walk_40dp"
        android:title="@string/type_walking"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_running"
        android:enabled="true"
        android:icon="@drawable/ic_vec_directions_run_40dp"
        android:title="@string/type_running"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cycling"
        android:enabled="true"
        android:icon="@drawable/ic_vec_directions_cycling_40dp"
        android:title="@string/type_cycling"
        app:showAsAction="ifRoom" />
</menu>